# mctools

./: CMakeLists.txt  README.md
cmake/: Common.cmake  FindGLM.cmake
mapviewer/: CMakeLists.txt  mcviewer-ideas
mapviewer/include/: AllegroIOAccessInterface.h  BlockData.h  Camera.h  ChunkData.h  CustomVertex.h  MCModel.h  Plane.h  Ray.h  Renderer.h  RendererBlock.h  RendererChunk.h  RendererChunkSection.h  RendererModel.h  Util.h  VBO.h  Vector.h  al_ext.h  tgetopt.h
mapviewer/include/Resource/: Atlas.h  AtlasBitmap.h  AtlasSheet.h  Bitmap.h  Manager.h  Model.h  ModelVariant.h  Resource.h
mapviewer/shaders/: default.pxl  default.vtx
mapviewer/src/: AllegroIOAccessInterface.cpp  BlockData.cpp  Camera.cpp  ChunkData.cpp  Level.cpp  MCModel.cpp  Renderer.cpp  RendererChunk.cpp  RendererModel.cpp  VBO.cpp  al_ext.c  main.cpp  tgetopt.cpp
mapviewer/src/Resource/: Atlas.cpp  AtlasBitmap.cpp  AtlasSheet.cpp  Manager.cpp  Model.cpp  ModelVariant.cpp  Resource.cpp
misc/: CMakeLists.txt  dump.cpp  loadsave.cpp
procmap/: BitMap.h  CMakeLists.txt  clean.cpp  clean.h  main.h  process.cpp  process.h  process_lua.cpp  procmap.cpp  tgetopt.cpp  widen.cpp  widen.h  worker.cpp  worker.h
procmap/lua/: chunk.cpp  chunk.h  lua_helper.cpp  lua_helper.h  map.cpp  map.h  nbt.cpp  region.cpp  region.h
qnbt/: CMakeLists.txt  InventoryModel.cpp  InventoryModel.h  InventoryWindow.cpp  InventoryWindow.h  MainWindow.cpp  MainWindow.h  NBTItemDelegate.cpp  NBTItemDelegate.h  NBTModel.cpp  NBTModel.h  main.cpp
trimmap/: BitMap.cpp  BitMap.h  CMakeLists.txt  clean.cpp  main.h  process.cpp  process.h  process_lua.cpp  process_lua.h  procmap.cpp  tgetopt.h  worker.cpp  worker.h
trimmap/lua/: chunk.h  map.h  nbt.h
trimmap/scripts/: portals.lua
